--- a/ZoomAndroid/res/layout-large/page_city_zoom.xml
+++ b/ZoomAndroid/res/layout-large/page_city_zoom.xml
@@ -54,6 +54,7 @@
 	                        android:padding="10dp" >
 
 	                        <ImageView
+	                            android:layout_gravity="center_horizontal"
 	                            android:id="@+id/imageViewIcon1"
 	                            android:layout_width="match_parent"
 	                            android:layout_height="0dp"
@@ -88,6 +89,7 @@
 	                        android:padding="10dp" >
 
 	                        <ImageView
+	                            android:layout_gravity="center_horizontal"
 	                            android:id="@+id/imageViewIcon2"
 	                            android:layout_width="match_parent"
 	                            android:layout_height="0dp"
@@ -125,6 +127,7 @@
                             android:paddingBottom="10dp" >
 
 	                        <ImageView
+	                            android:layout_gravity="center_horizontal"
 	                            android:id="@+id/imageViewIcon3"
                                 android:layout_width="match_parent"
                                 android:layout_height="0dp"
@@ -161,6 +164,7 @@
 	                        android:padding="10dp" >
 
 	                        <ImageView
+	                            android:layout_gravity="center_horizontal"
 	                            android:id="@+id/imageViewIcon4"
 	                            android:layout_width="match_parent"
 	                            android:layout_height="0dp"
@@ -234,6 +238,7 @@
 	                                android:padding="10dp" >
 
 	                                <ImageView
+	                            		android:layout_gravity="center_horizontal"
 	                                    android:id="@+id/ImageView03"
 	                                    android:layout_width="match_parent"
 	                                    android:layout_height="0dp"
@@ -268,6 +273,7 @@
 	                                android:padding="10dp" >
 
 	                                <ImageView
+	                            android:layout_gravity="center_horizontal"
 	                                    android:id="@+id/imageViewIcon9"
 	                                    android:layout_width="match_parent"
 	                                    android:layout_height="0dp"
@@ -311,6 +317,7 @@
 	                                android:padding="10dp" >
 
 	                                <ImageView
+	                            		android:layout_gravity="center_horizontal"
 	                                    android:id="@+id/imageViewIcon6"
 	                                    android:layout_width="match_parent"
 	                                    android:layout_height="0dp"
@@ -376,6 +383,7 @@
 	                                android:padding="10dp" >
 
 	                                <ImageView
+	                            		android:layout_gravity="center_horizontal"
 	                                    android:id="@+id/imageViewIcon7"
 	                                    android:layout_width="match_parent"
 	                                    android:layout_height="0dp"
@@ -435,6 +443,7 @@
 	                                android:padding="10dp" >
 
 	                                <ImageView
+	                            android:layout_gravity="center_horizontal"
 	                                    android:id="@+id/ImageView01"
 	                                    android:layout_width="match_parent"
 	                                    android:layout_height="0dp"
