--- a/ZoomAndroid/res/layout-large/page_kes.xml
+++ b/ZoomAndroid/res/layout-large/page_kes.xml
@@ -54,6 +54,7 @@
 	                        android:padding="10dp" >
 
 	                        <ImageView
+	                            android:layout_gravity="center_horizontal"
 	                            android:id="@+id/imageViewIcon1"
 	                            android:layout_width="match_parent"
 	                            android:layout_height="0dp"
@@ -88,6 +89,7 @@
 	                        android:padding="10dp" >
 
 	                        <ImageView
+	                            android:layout_gravity="center_horizontal"
 	                            android:id="@+id/imageViewIcon2"
 	                            android:layout_width="match_parent"
 	                            android:layout_height="0dp"
@@ -125,6 +127,7 @@
                             android:paddingBottom="10dp" >
 
 	                        <ImageView
+	                            android:layout_gravity="center_horizontal"
 	                            android:id="@+id/imageViewIcon3"
 	                            android:layout_width="match_parent"
 	                            android:layout_height="0dp"
