--- a/ZoomAndroid/res/layout-large/page_kulturni_vodic.xml
+++ b/ZoomAndroid/res/layout-large/page_kulturni_vodic.xml
@@ -64,8 +64,9 @@
 	                                android:layout_weight="1" >
 	                                
 	                                <ImageView
+	                            		android:layout_gravity="center_horizontal"
 	                                    android:id="@+id/kulturniKalendarIcon"
-	                                    android:layout_width="fill_parent"
+	                                    android:layout_width="match_parent"
 	                                    android:layout_height="90dp"
 	                                    android:scaleType="fitCenter"
 	                                    android:layout_alignParentTop="true"
@@ -180,6 +181,7 @@
 	                                android:padding="10dp" >
 
 	                                <ImageView
+	                            android:layout_gravity="center_horizontal"
 	                                    android:id="@+id/imageViewIcon6"
 	                                    android:layout_width="fill_parent"
 	                                    android:layout_height="fill_parent"
@@ -214,6 +216,7 @@
 	                                android:padding="10dp" >
 
 	                                <ImageView
+	                            android:layout_gravity="center_horizontal"
 	                                    android:id="@+id/imageViewIcon7"
 	                                    android:layout_width="fill_parent"
 	                                    android:layout_height="fill_parent"
@@ -291,6 +294,7 @@
 									android:padding="10dp">
 
 	                                <ImageView
+	                            android:layout_gravity="center_horizontal"
 	                                    android:id="@+id/ImageView01"
 	                                    android:layout_width="fill_parent"
 	                                    android:layout_height="fill_parent"
@@ -325,6 +329,7 @@
 	                                android:padding="10dp" >
 
 	                                <ImageView
+	                            android:layout_gravity="center_horizontal"
 	                                    android:id="@+id/imageViewIcon9"
 	                                    android:layout_width="match_parent"
 	                                    android:layout_height="fill_parent"
