--- a/ZoomAndroid/res/layout-large/page_nightlife.xml
+++ b/ZoomAndroid/res/layout-large/page_nightlife.xml
@@ -65,8 +65,9 @@
 	                                android:layout_weight="1" >
 	                                
 	                                <ImageView
+	                            android:layout_gravity="center_horizontal"
 	                                    android:id="@+id/kulturniKalendarIcon"
-	                                    android:layout_width="fill_parent"
+	                                    android:layout_width="match_parent"
 	                                    android:layout_height="90dp"
 	                                    android:scaleType="fitCenter"
 	                                    android:layout_alignParentTop="true"
@@ -144,9 +145,10 @@
 	                                android:padding="10dp" >
 
 	                                <ImageView
+	                            android:layout_gravity="center_horizontal"
 	                                    android:id="@+id/imageViewIcon6"
-	                                    android:layout_width="fill_parent"
-	                                    android:layout_height="fill_parent"
+	                                    android:layout_width="match_parent"
+	                                    android:layout_height="0dp"
 	                                    android:layout_weight="1"
 	                                    android:scaleType="fitCenter"
 	                                    android:src="@drawable/clubs_256" />
@@ -178,9 +180,10 @@
 	                                android:padding="10dp" >
 
 	                                <ImageView
+	                            android:layout_gravity="center_horizontal"
 	                                    android:id="@+id/imageViewIcon7"
-	                                    android:layout_width="fill_parent"
-	                                    android:layout_height="fill_parent"
+	                                    android:layout_width="match_parent"
+	                                    android:layout_height="0dp"
 	                                    android:layout_weight="1"
 	                                    android:scaleType="fitCenter"
 	                                    android:src="@drawable/bars_256" />
@@ -219,9 +222,10 @@
 	                                android:padding="10dp" >
 
 	                                <ImageView
+	                            android:layout_gravity="center_horizontal"
 	                                    android:id="@+id/ImageView01"
-	                                    android:layout_width="fill_parent"
-	                                    android:layout_height="fill_parent"
+	                                    android:layout_width="match_parent"
+	                                    android:layout_height="0dp"
 	                                    android:layout_weight="1"
 	                                    android:scaleType="fitCenter"
 	                                    android:src="@drawable/events_256" />
