--- a/ZoomAndroid/res/layout-large/page_prevoz.xml
+++ b/ZoomAndroid/res/layout-large/page_prevoz.xml
@@ -56,6 +56,7 @@
 
                             <ImageView
                                 android:id="@+id/imageViewIcon2"
+	                            android:layout_gravity="center_horizontal"
                                 android:layout_width="match_parent"
                                 android:layout_height="0dp"
                                 android:layout_weight="1"
@@ -91,6 +92,7 @@
 
                             <ImageView
                                 android:id="@+id/imageViewIcon1"
+	                            android:layout_gravity="center_horizontal"
                                 android:layout_width="match_parent"
                                 android:layout_height="0dp"
                                 android:layout_weight="1"
@@ -125,6 +127,7 @@
 
                                     <ImageView
                                         android:id="@+id/imageViewIcon8"
+	                            android:layout_gravity="center_horizontal"
                                         android:layout_width="fill_parent"
                                         android:layout_height="fill_parent"
                                         android:layout_weight="1"
@@ -160,6 +163,7 @@
 
                                     <ImageView
                                         android:id="@+id/ImageView01"
+	                            android:layout_gravity="center_horizontal"
                                         android:layout_width="fill_parent"
                                         android:layout_height="fill_parent"
                                         android:layout_weight="1"
@@ -238,6 +242,7 @@
 
                             <ImageView
                                 android:id="@+id/imageViewIcon3"
+	                            android:layout_gravity="center_horizontal"
                                 android:layout_width="match_parent"
                                 android:layout_height="0dp"
                                 android:layout_weight="1"
@@ -276,6 +281,7 @@
 
                             <ImageView
                                 android:id="@+id/imageViewIcon4"
+	                            android:layout_gravity="center_horizontal"
                                 android:layout_width="match_parent"
                                 android:layout_height="0dp"
                                 android:layout_weight="1"
@@ -322,6 +328,7 @@
 
                                     <ImageView
                                         android:id="@+id/imageViewIcon7"
+	                            android:layout_gravity="center_horizontal"
                                         android:layout_width="fill_parent"
                                         android:layout_height="fill_parent"
                                         android:layout_weight="1"
@@ -357,6 +364,7 @@
 
                                     <ImageView
                                         android:id="@+id/imageViewIcon5"
+	                            android:layout_gravity="center_horizontal"
                                         android:layout_width="fill_parent"
                                         android:layout_height="fill_parent"
                                         android:layout_weight="1"
