--- a/ZoomAndroid/res/layout-large/page_rainbow.xml
+++ b/ZoomAndroid/res/layout-large/page_rainbow.xml
@@ -52,6 +52,7 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon1"
+	                            android:layout_gravity="center_horizontal"
 	                            android:layout_width="match_parent"
 	                            android:layout_height="wrap_content"
 	                            android:layout_weight="1"
@@ -89,8 +90,9 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon2"
+	                            android:layout_gravity="center_horizontal"
 	                            android:layout_width="wrap_content"
-	                            android:layout_height="wrap_content"
+	                            android:layout_height="0dp"
 	                            android:layout_weight="1"
 	                            android:scaleType="fitCenter"
 	                            android:src="@drawable/drink_and_food_256a" />
@@ -123,8 +125,9 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon3"
+	                            android:layout_gravity="center_horizontal"
 	                            android:layout_width="match_parent"
-	                            android:layout_height="wrap_content"
+	                            android:layout_height="0dp"
 	                            android:layout_weight="1"
 	                            android:scaleType="fitCenter"
 	                            android:src="@drawable/nightlife_256" />
@@ -160,8 +163,9 @@
 
 	                        <ImageView
 	                            android:id="@+id/ImageView01"
+	                            android:layout_gravity="center_horizontal"
 	                            android:layout_width="match_parent"
-	                            android:layout_height="wrap_content"
+	                            android:layout_height="0dp"
 	                            android:layout_weight="1"
 	                            android:scaleType="fitCenter"
 	                            android:src="@drawable/spa_256" />
@@ -234,8 +238,9 @@
 
 	                                <ImageView
 	                                    android:id="@+id/imageViewIcon5"
+	                            android:layout_gravity="center_horizontal"
 	                                    android:layout_width="match_parent"
-	                                    android:layout_height="fill_parent"
+	                                    android:layout_height="0dp"
 	                                    android:layout_weight="1"
 	                                    android:scaleType="fitCenter"
 	                                    android:src="@drawable/cruising_256" />
