--- a/ZoomAndroid/res/layout/page_settings.xml
+++ b/ZoomAndroid/res/layout/page_settings.xml
@@ -72,6 +72,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="15dp"
+                        android:layout_marginLeft="@dimen/settings_margin"
+                        android:layout_marginRight="@dimen/settings_margin"
                         android:focusable="true"
                         android:focusableInTouchMode="true"
                         android:spinnerMode="dialog"
@@ -101,6 +103,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="15dp"
+                        android:layout_marginLeft="@dimen/settings_margin"
+                        android:layout_marginRight="@dimen/settings_margin"
                         android:focusable="true"
                         android:focusableInTouchMode="true"
                         android:spinnerMode="dialog"
@@ -130,6 +134,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="15dp"
+                        android:layout_marginLeft="@dimen/settings_margin"
+                        android:layout_marginRight="@dimen/settings_margin"
                         android:focusable="true"
                         android:dropDownWidth="400dp"
                         android:spinnerMode="dialog"
