--- a/ZoomAndroid/res/layout-large/page_main.xml
+++ b/ZoomAndroid/res/layout-large/page_main.xml
@@ -65,6 +65,7 @@
                         android:orientation="vertical">
 
                         <ImageView
+                            android:layout_gravity="center_horizontal"
                             android:id="@+id/imageViewIcon1"
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
@@ -104,6 +105,7 @@
                         android:orientation="vertical">
 
                         <ImageView
+	                            android:layout_gravity="center_horizontal"
                             android:id="@+id/imageViewIcon2"
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
@@ -140,6 +142,7 @@
                                 android:orientation="vertical">
 
                                 <ImageView
+	                            android:layout_gravity="center_horizontal"
                                     android:id="@+id/imageViewIcon7"
                                     android:layout_width="fill_parent"
                                     android:layout_height="0dp"
@@ -176,6 +179,7 @@
                         android:orientation="vertical">
 
                         <ImageView
+	                            android:layout_gravity="center_horizontal"
                             android:id="@+id/imageViewIcon3"
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
@@ -265,6 +269,7 @@
                                 android:orientation="vertical">
 
                                 <ImageView
+	                            android:layout_gravity="center_horizontal"
                                     android:id="@+id/ImageView03"
                                     android:layout_width="fill_parent"
                                     android:layout_height="0dp"
@@ -301,6 +306,7 @@
                                 android:orientation="vertical">
 
                                 <ImageView
+	                            android:layout_gravity="center_horizontal"
                                     android:id="@+id/imageViewIcon6"
                                     android:layout_width="fill_parent"
                                     android:layout_height="0dp"
@@ -345,6 +351,7 @@
                                 android:orientation="vertical">
 
                                 <ImageView
+	                            android:layout_gravity="center_horizontal"
                                     android:id="@+id/ImageView04"
                                     android:layout_width="fill_parent"
                                     android:layout_height="0dp"
@@ -384,6 +391,7 @@
                                 android:orientation="vertical">
 
                                 <ImageView
+	                            android:layout_gravity="center_horizontal"
                                     android:id="@+id/ImageView02"
                                     android:layout_width="match_parent"
                                     android:layout_height="0dp"
@@ -439,6 +447,7 @@
                                 android:orientation="vertical">
 
                                 <ImageView
+	                            android:layout_gravity="center_horizontal"
                                     android:id="@+id/ImageView01"
                                     android:layout_width="fill_parent"
                                     android:layout_height="0dp"
@@ -475,6 +484,7 @@
                                 android:orientation="vertical">
 
                                 <ImageView
+	                            android:layout_gravity="center_horizontal"
                                     android:id="@+id/imageViewIcon8"
                                     android:layout_width="fill_parent"
                                     android:layout_height="0dp"
@@ -521,6 +531,7 @@
                                 android:orientation="vertical">
 
                                 <ImageView
+	                            android:layout_gravity="center_horizontal"
                                     android:id="@+id/imageViewIcon9"
                                     android:layout_width="match_parent"
                                     android:layout_height="0dp"
@@ -556,6 +567,7 @@
                         android:orientation="vertical">
 
                         <ImageView
+	                            android:layout_gravity="center_horizontal"
                             android:id="@+id/imageViewIcon4"
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
@@ -592,7 +604,7 @@
 </LinearLayout>
 
 <LinearLayout android:id="@+id/left_drawer"
-      android:layout_width="240dp"
+      android:layout_width="@dimen/navigation_drawer_width"
       android:layout_height="match_parent"
       android:clickable="true"
       android:layout_gravity="start"
