--- a/ZoomAndroid/res/layout-large/page_medico.xml
+++ b/ZoomAndroid/res/layout-large/page_medico.xml
@@ -49,6 +49,7 @@
 	                        android:padding="10dp" >
 
 	                        <ImageView
+	                            android:layout_gravity="center_horizontal"
 	                            android:id="@+id/imageViewIcon1"
 	                            android:layout_width="match_parent"
 	                            android:layout_height="0dp"
@@ -84,6 +85,7 @@
 	                        android:padding="10dp" >
 
 	                        <ImageView
+	                            android:layout_gravity="center_horizontal"
 	                            android:id="@+id/imageViewIcon2"
 	                            android:layout_width="match_parent"
 	                            android:layout_height="0dp"
@@ -119,6 +121,7 @@
 	                        android:padding="10dp" >
 
 	                        <ImageView
+	                            android:layout_gravity="center_horizontal"
 	                            android:id="@+id/imageViewIcon3"
 	                            android:layout_width="match_parent"
 	                            android:layout_height="0dp"
