--- a/ZoomAndroid/res/layout-large/page_rainbow_wellness_and_spa.xml
+++ b/ZoomAndroid/res/layout-large/page_rainbow_wellness_and_spa.xml
@@ -50,6 +50,7 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon1"
+	                            android:layout_gravity="center_horizontal"
 	                            android:layout_width="match_parent"
 	                            android:layout_height="wrap_content"
 	                            android:layout_weight="1"
@@ -85,6 +86,7 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon2"
+	                            android:layout_gravity="center_horizontal"
 	                            android:layout_width="match_parent"
 	                            android:layout_height="wrap_content"
 	                            android:layout_weight="1"
@@ -120,6 +122,7 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon3"
+	                            android:layout_gravity="center_horizontal"
 	                            android:layout_width="match_parent"
 	                            android:layout_height="wrap_content"
 	                            android:layout_weight="1"
@@ -154,6 +157,7 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon4"
+	                            android:layout_gravity="center_horizontal"
 	                            android:layout_width="match_parent"
 	                            android:layout_height="wrap_content"
 	                            android:layout_weight="1"
