--- a/ZoomAndroid/res/layout-large/page_smestaj.xml
+++ b/ZoomAndroid/res/layout-large/page_smestaj.xml
@@ -52,6 +52,7 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon1"
+	                            android:layout_gravity="center_horizontal"
 	                            android:layout_width="match_parent"
 	                            android:layout_height="0dp"
 	                            android:layout_weight="1"
@@ -86,6 +87,7 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon2"
+	                            android:layout_gravity="center_horizontal"
 	                            android:layout_width="match_parent"
 	                            android:layout_height="0dp"
 	                            android:layout_weight="1"
@@ -120,6 +122,7 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon3"
+	                            android:layout_gravity="center_horizontal"
 	                            android:layout_width="match_parent"
 	                            android:layout_height="0dp"
 	                            android:layout_weight="1"
@@ -157,6 +160,7 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon4"
+	                            android:layout_gravity="center_horizontal"
 	                            android:layout_width="match_parent"
 	                            android:layout_height="0dp"
 	                            android:layout_weight="1"
@@ -234,8 +238,9 @@
 
 	                                <ImageView
 	                                    android:id="@+id/imageViewIcon5"
-	                                    android:layout_width="fill_parent"
-	                                    android:layout_height="fill_parent"
+	                            android:layout_gravity="center_horizontal"
+	                                    android:layout_width="match_parent"
+	                                    android:layout_height="0dp"
 	                                    android:layout_weight="1"
 	                                    android:scaleType="fitCenter"
 	                                    android:src="@drawable/rooms_256" />
@@ -271,8 +276,9 @@
 
 	                                <ImageView
 	                                    android:id="@+id/ImageView01"
-	                                    android:layout_width="fill_parent"
-	                                    android:layout_height="fill_parent"
+	                            android:layout_gravity="center_horizontal"
+	                                    android:layout_width="match_parent"
+	                                    android:layout_height="0dp"
 	                                    android:layout_weight="1"
 	                                    android:scaleType="fitCenter"
 	                                    android:src="@drawable/camps_256" />
@@ -316,8 +322,9 @@
 
 	                                <ImageView
 	                                    android:id="@+id/imageViewIcon9"
+	                            android:layout_gravity="center_horizontal"
 	                                    android:layout_width="match_parent"
-	                                    android:layout_height="fill_parent"
+	                                    android:layout_height="0dp"
 	                                    android:layout_weight="1"
 	                                    android:scaleType="fitCenter"
 	                                    android:src="@drawable/long_term_256" />
@@ -353,8 +360,9 @@
 
 	                                <ImageView
 	                                    android:id="@+id/imageViewIcon7"
-	                                    android:layout_width="fill_parent"
-	                                    android:layout_height="fill_parent"
+	                            		android:layout_gravity="center_horizontal"
+	                                    android:layout_width="match_parent"
+	                                    android:layout_height="0dp"
 	                                    android:layout_weight="1"
 	                                    android:scaleType="fitCenter"
 	                                    android:src="@drawable/rentlocal_256" />
