--- a/ZoomAndroid/res/layout-normal/page_main.xml
+++ b/ZoomAndroid/res/layout-normal/page_main.xml
@@ -600,7 +600,7 @@
 </LinearLayout>
 
 <LinearLayout android:id="@+id/left_drawer"
-      android:layout_width="300dp"
+      android:layout_width="@dimen/navigation_drawer_width"
       android:layout_height="match_parent"
       android:clickable="true"
       android:layout_gravity="start"
