--- a/ZoomAndroid/res/values-large/dimens.xml
+++ b/ZoomAndroid/res/values-large/dimens.xml
@@ -8,13 +8,14 @@
          Per the design guidelines, navigation drawers should be between 240dp and 320dp:
          https://developer.android.com/design/patterns/navigation-drawer.html
     -->
-    <!--     DIMENS - DEFAULT -->
-    <dimen name="navigation_drawer_width">300dp</dimen>
+<!--     DIMENS - LARGE -->
+    <dimen name="navigation_drawer_width">400dp</dimen>
     
     <dimen name="button_icon_height">80dp</dimen>
 	<dimen name="button_icon_height_large">120dp</dimen>
 	
 	<dimen name="settings_margin">0dp</dimen>
-	<dimen name="settings_height">30dp</dimen>
+	<dimen name="settings_height">60dp</dimen>
 	<dimen name="settings_dialog_width">60dp</dimen>
+	
 </resources>
