--- a/ZoomAndroid/res/layout-normal/page_main.xml
+++ b/ZoomAndroid/res/layout-normal/page_main.xml
@@ -66,9 +66,10 @@
 
                         <ImageView
                             android:id="@+id/imageViewIcon1"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="0dp"
                             android:layout_weight="1"
+                            android:gravity="center_horizontal"
                             android:scaleType="fitCenter"
                             android:src="@drawable/must_2_do_256" >
                         </ImageView>
@@ -97,16 +98,16 @@
                         android:layout_height="match_parent"
                         android:background="@drawable/icon_background_drawable_color2"
                         android:clickable="true"
-                                android:paddingLeft="2dp"
-                                android:paddingRight="2dp"
-                                android:paddingTop="10dp"
-                                android:paddingBottom="10dp"
+                        android:paddingLeft="2dp"
+                        android:paddingRight="2dp"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
                         android:orientation="vertical">
 
                         <ImageView
                             android:id="@+id/imageViewIcon2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
                             android:layout_weight="1"
                             android:scaleType="fitCenter"
                             android:src="@drawable/culture_256" >
@@ -144,9 +145,10 @@
 
                                 <ImageView
                                     android:id="@+id/imageViewIcon7"
-                                    android:layout_width="fill_parent"
-                                    android:layout_height="fill_parent"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="0dp"
                                     android:layout_weight="1"
+                                    android:gravity="center_horizontal"
                                     android:scaleType="fitCenter"
                                     android:src="@drawable/excursions_256" >
 
@@ -448,8 +450,8 @@
 
                                 <ImageView
                                     android:id="@+id/ImageView01"
-                                    android:layout_width="fill_parent"
-                                    android:layout_height="fill_parent"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="0dp"
                                     android:layout_weight="1"
                                     android:scaleType="fitCenter"
                                     android:src="@drawable/accomodation_256" >
